# utf8-encoding-files-pre-commit-hook

./: .pre-commit-hooks.yaml  README.md  setup.cfg  utf8-encoding.py  utf8_encoding.py
