[metadata]
name = utf8-files-encoding-pre-commit-hook
version = 0.1.0
description = Checks and convert C, C++ files to utf-8
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author =cHLeB@
author_email = chlebikg@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    toml
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    utf8-encoding = utf8-encoding:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

